--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,28 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+body{
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.container{
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-flex; 
+  display: flex;
+  justify-content: center;
+}
+.container-margin{
+  display: -webkit-flex; 
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  height: 100%;
+}
+.blue-container{
+  background-color: #02aaeb;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
 }
